<resources>
    <string name="app_name">Tetris</string>
    <string name="tetris">TETRIS</string>
    <string name="high_score_0">High score: 0</string>
    <string name="new_game">new game</string>
    <string name="reset_score">reset score</string>
    <string name="exit">exit</string>
    <string name="current_score">current score</string>
    <string name="high_score">high score</string>
    <string name="restart">restart</string>
</resources>